--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,8 @@ POSSIBILITY OF SUCH DAMAGE.
         <version.microprofile-config>3.1</version.microprofile-config>
         <version.smallrye-config>3.12.4</version.smallrye-config>
         <version.mockito>5.16.0</version.mockito>
-        <version.junit>5.11.4</version.junit>
-        <versin.slf4j>2.0.17</versin.slf4j>
+        <version.junit>5.12.1</version.junit>
+        <version.slf4j>2.0.17</version.slf4j>
         <version.eclipselink>4.0.3</version.eclipselink>
         <version.ulidj>1.0.4</version.ulidj>
         <version.assertj>3.27.3</version.assertj>
@@ -60,6 +60,7 @@ POSSIBILITY OF SUCH DAMAGE.
         <version.yasson>3.0.4</version.yasson>
         <version.weld-junit5>5.0.0.Final</version.weld-junit5>
         <version.h2database>2.3.232</version.h2database>
+        <version.jetty>12.0.18</version.jetty>
         <version.jacoco>0.8.12</version.jacoco>
         <version.sonar>5.0.0.4389</version.sonar>
 
@@ -127,7 +128,7 @@ POSSIBILITY OF SUCH DAMAGE.
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>${versin.slf4j}</version>
+            <version>${version.slf4j}</version>
         </dependency>
 
         <!-- SLF4J implemented by JUL(java.util.logging.Logger) -->
@@ -135,7 +136,7 @@ POSSIBILITY OF SUCH DAMAGE.
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
-            <version>${versin.slf4j}</version>
+            <version>${version.slf4j}</version>
         </dependency>
 
         <!-- Log4j implemented over SLF4J -->
@@ -143,7 +144,7 @@ POSSIBILITY OF SUCH DAMAGE.
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
-            <version>${versin.slf4j}</version>
+            <version>${version.slf4j}</version>
         </dependency>
 
         <!-- Apache Commons Logging implemented over SLF4J -->
@@ -151,7 +152,7 @@ POSSIBILITY OF SUCH DAMAGE.
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
-            <version>${versin.slf4j}</version>
+            <version>${version.slf4j}</version>
         </dependency>
 
         <!-- ULID library -->
@@ -277,10 +278,22 @@ POSSIBILITY OF SUCH DAMAGE.
         </dependency>
 
         <!-- H2 Database -->
+        <!-- License: EPL-1.0 -->
+        <!-- License: MPL-2.0 -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>${version.h2database}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- JNDI -->
+        <!-- License: EPL-2.0 -->
+        <!-- License: ASL-2.0 -->
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-plus</artifactId>
+            <version>${version.jetty}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
